 cmake_minimum_required(VERSION 3.15)
 project(test)
#  set(SRC add.cpp main.cpp substract.cpp)
# aux_source_directory(${PROJECT_SOURCE_DIR} SRC)
file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
 set(EXECUTABLE_OUTPUT_PATH /Users/kyle/leetcode_practice/leetcode_practice/CMake/_build)
 include_directories(${PROJECT_SOURCE_DIR}/include)
 set(CMAKE_CXX_STANDARD 98)
 add_executable(app ${SRC})
